llm/llm-kokoro/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-kokoro-ingress
  namespace: llm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: tts.ddellspe.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: llm-kokoro-service
            port:
              number: 8880
  tls:
  - hosts:
    - tts.ddellspe.dev
    secretName: ddellspe-tls
